[package]
name = "manual-veh"
version = "0.1.0"
authors = ["wildbook <book.wille@gmail.com>"]
edition = "2018"

[dependencies]
pelite = "0.8.1"
lazy_static = "1.4.0"

[dependencies.winapi]
version = "0.3.8"
default-features = false
features = ["std", "consoleapi", "processthreadsapi", "windef", "winuser", "minwinbase", "winnt", "errhandlingapi", "excpt", "utilapiset", "libloaderapi"]
