[package]
name = "manual-veh"
version = "0.1.0"
authors = ["wildbook <book.wille@gmail.com>"]
edition = "2018"

[dependencies]
pelite = { version = "0.10.0", default-features = false }
once_cell = "1.16.0"

[dependencies.winapi]
version = "0.3.9"
default-features = false
features = ["std", "winnt", "minwinbase"]
