[package]
name = "manual-veh"
version = "0.1.0"
authors = ["wildbook <book.wille@gmail.com>"]
edition = "2021"

[features]
default = ["impl-winapi", "impl-windows"]

impl-winapi = ["dep:winapi"]
impl-windows = ["dep:windows-sys"]

[dependencies]
once_cell = "1.16.0"
pelite      = { version = "0.10.0", default-features = false }
winapi      = { optional = true, version = "0.3.9",  default_features = false, features = ["winnt"] }
windows-sys = { optional = true, version = "0.42.0", default_features = false, features = ["Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Kernel"] }

[dev-dependencies]
winapi = { version = "0.3.9", default_features = false, features = ["minwinbase"] }
